<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/ScrollView"
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp">
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	<TextView
	    android:layout_below="@+id/logo"
	    android:id="@+id/textView1"
	    android:layout_width="fill_parent"
		android:layout_marginBottom="5dp"
		android:text="@string/info_title"
		android:layout_height="wrap_content">
	</TextView>
	<TextView
	    android:layout_below="@+id/textView1"
	    android:id="@+id/textView2"
	    android:layout_width="fill_parent"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="0dp"
		android:textStyle="bold"
		android:text="@string/author"
		android:layout_height="wrap_content">
	</TextView>
	<TextView
	    android:layout_below="@+id/textView2"
	    android:id="@+id/textView3"
	    android:layout_width="fill_parent"
		android:textSize="12sp"
		android:layout_marginTop="0dp"
		android:layout_marginBottom="5dp"
		android:textStyle="bold"
		android:text="@string/author_email"
		android:layout_height="wrap_content">
	 </TextView>
	<TextView
	    android:layout_below="@+id/textView3"
	    android:id="@+id/textView4"
	    android:layout_width="fill_parent"
		android:layout_marginTop="20dp"
		android:layout_marginBottom="5dp"
		android:textSize="11sp"
		android:text="@string/info_license"
		android:layout_height="wrap_content"
		android:linksClickable="true">
	 </TextView>
	<TextView
		android:layout_below="@+id/textView4"
		android:layout_width="fill_parent"
		android:layout_marginTop="20dp"
		android:textSize="11sp"
		android:text="@string/info_icons"
		android:layout_height="wrap_content">
	 </TextView>
	</RelativeLayout>
</ScrollView>