<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/ScrollView"
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="wrap_content" android:layout_height="wrap_content">
	    <TextView
        	android:id="@+id/password_label"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
		    android:text="@string/label_password"/>
	    <EditText
	        android:id="@+id/password"
			android:layout_below="@id/password_label"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:maxLines="5"
	        android:singleLine="true"
	        android:editable="false"/>
	    <LinearLayout android:id="@+id/table"
		    android:layout_height="wrap_content"
		    android:layout_width="fill_parent"
		    android:orientation="vertical"
		    android:layout_margin="5dp"
		    android:layout_below="@+id/password" >
			<View
		        android:layout_height="2dp"
	        	android:layout_marginTop="5dp"
	        	android:layout_marginBottom="10dp"
				android:layout_width="fill_parent"
		        android:background="#FF909090" />
		    <TextView
	        	android:id="@+id/label_difficulty"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
			    android:text="@string/label_difficulty"/>
			<SeekBar android:id="@+id/difficulty_bar"
				android:layout_height="fill_parent"
				android:layout_width="fill_parent"
				android:layout_margin="5dp"
				android:max="4"
				android:progress="1" />
		    <TextView
	        	android:id="@+id/difficulty_state"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
			    android:text="..."
			    android:textColor="#FFFFFF"
			    android:gravity="center_horizontal"
				android:layout_margin="5dp"
				android:padding="5dp" />
			<View
		        android:layout_height="2dp"
				android:layout_width="fill_parent"
	       		android:layout_marginTop="10dp"
		        android:background="#FF909090" />
		</LinearLayout>
	    <Button
	        android:id="@+id/ok"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/table"
	        android:layout_alignParentRight="true"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="5dp"
	        android:text="@string/button_generate" />
	</RelativeLayout>
</ScrollView>